@@ -2728,3 +2728,4 @@
 ( cvs diff -u -r 1.395.2.315 -r 1.395.2.316 src/summaryview.c;  ) > 2.10.0cvs72.patchset
 ( cvs diff -u -r 1.52.2.42 -r 1.52.2.43 src/prefs_folder_item.c;  ) > 2.10.0cvs73.patchset
 ( cvs diff -u -r 1.155.2.72 -r 1.155.2.73 src/Makefile.am;  cvs diff -u -r 1.60.2.35 -r 1.60.2.36 src/filtering.c;  cvs diff -u -r 1.213.2.151 -r 1.213.2.152 src/folder.c;  cvs diff -u -r 1.274.2.202 -r 1.274.2.203 src/mainwindow.c;  cvs diff -u -r 1.75.2.44 -r 1.75.2.45 src/matcher.c;  cvs diff -u -r 1.39.2.14 -r 1.39.2.15 src/matcher.h;  cvs diff -u -r 1.25.2.30 -r 1.25.2.31 src/matcher_parser_parse.y;  cvs diff -u -r 1.150.2.100 -r 1.150.2.101 src/procmsg.c;  cvs diff -u -r 1.60.2.46 -r 1.60.2.47 src/procmsg.h;  cvs diff -u -r 1.25.2.44 -r 1.25.2.45 src/stock_pixmap.c;  cvs diff -u -r 1.18.2.30 -r 1.18.2.31 src/stock_pixmap.h;  cvs diff -u -r 1.395.2.316 -r 1.395.2.317 src/summaryview.c;  cvs diff -u -r 1.68.2.39 -r 1.68.2.40 src/summaryview.h;  cvs diff -u -r 1.43.2.79 -r 1.43.2.80 src/toolbar.c;  cvs diff -u -r 1.19.2.21 -r 1.19.2.22 src/toolbar.h;  diff -u /dev/null src/pixmaps/watchthread.xpm;  ) > 2.10.0cvs74.patchset
+( cvs diff -u -r 1.274.2.203 -r 1.274.2.204 src/mainwindow.c;  cvs diff -u -r 1.11.2.12 -r 1.11.2.13 src/manual.c;  cvs diff -u -r 1.8.2.8 -r 1.8.2.9 src/manual.h;  cvs diff -u -r 1.5.2.61 -r 1.5.2.62 src/gtk/gtkutils.c;  ) > 2.10.0cvs75.patchset
